quick check and styling for conditions

--- a/src/lib/components/QuarterBackClassic.css
+++ b/src/lib/components/QuarterBackClassic.css
@@ -44,3 +44,8 @@
 .QuarterBackRules > :last-child::before {
   border-radius: 0 0 0 4px;
 }
+
+.QuarterBackConditionActive {
+  background: #5caafa;
+  color: #fff;
+}
