--- a/src/lib/components/QuarterBackClassic.css
+++ b/src/lib/components/QuarterBackClassic.css
@@ -2,12 +2,17 @@
   background: #fdf7e9;
 }
 
+.QuarterBackTitle {
+  color: #ffe09e;
+  padding-bottom: 5px;
+}
+
 .QuarterBackGroup,
 .QuarterBackRuleWrapper {
   border: 1px solid #ffe09e;
   border-radius: 3px;
   padding: 6px;
-  margin: 2px 0;
+  margin: 4px 0;
   position: relative;
 }
 
@@ -34,7 +39,7 @@
 
 .QuarterBackRules > ::before {
   border-width: 0 0 2px 2px;
-  top: -4px;
+  top: -6px;
 }
 
 .QuarterBackRules > :last-child::after {
