big big changes for adding custom css classes

--- a/src/lib/components/styles/QuarterBack.css
+++ b/src/lib/components/styles/QuarterBack.css
@@ -1,11 +1,11 @@
 .QuarterBackHeader,
 .QuarterBackRule,
-.QuarterBackRuleWrapper {
+.QuarterBackRuleEdit {
   display: flex;
   justify-content: space-between;
 }
 
-.QuarterBackRule {
+.QuarterBackRuleEdit {
   justify-content: normal;
 }
 
