--- a/src/lib/components/styles/QuarterBackClassic.css
+++ b/src/lib/components/styles/QuarterBackClassic.css
@@ -8,7 +8,7 @@
 }
 
 .QuarterBackGroup,
-.QuarterBackRuleWrapper {
+.QuarterBackRule {
   border: 1px solid #ffe09e;
   border-radius: 3px;
   padding: 6px;
